<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gio.martino.moonboard.CreateProblemActivity">
    <item android:id="@+id/action_selectHoldType" android:title="@string/action_holdTypeSelector"
    android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_freeSelectionMode" android:title="@string/action_freeSelectionModeOn"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_clear" android:title="@string/action_clear"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_save" android:title="@string/action_save"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
